--- a/practica2.html
+++ b/practica2.html
@@ -711,6 +711,11 @@ mediana… de cada variable.</p>
 ##  Mean   : 4.138   Mean   : 4.529                                        
 ##  3rd Qu.: 4.330   3rd Qu.: 5.250                                        
 ##  Max.   :17.000   Max.   :41.000</code></pre>
+<p>Veiem com al resum de totes les variables, el qual ens deixa veure
+els màxims, mínims, mitjana i mediana de cada una de les variables, no
+apreciem cap dada que s’escapi de la normalitat del que és el món del
+futbol. Veiem molts mínims a zero i alguns valors màxims alts que a
+vegades pot costar de veure al món del futbol, però no impossibles.</p>
 </div>
 </div>
 <div id="anàlisi-de-les-dades" class="section level1" number="5">
@@ -1059,12 +1064,13 @@ efectuada pel públic local.</p>
 </div>
 <div id="bibliografía" class="section level1" number="7">
 <h1><span class="header-section-number">7</span> Bibliografía</h1>
-<p>Dades d’aforament extretes de FBREF: <a href="https://fbref.com/en/comps/12/2019-2020/schedule/2019-2020-La-Liga-Scores-and-Fixtures" class="uri">https://fbref.com/en/comps/12/2019-2020/schedule/2019-2020-La-Liga-Scores-and-Fixtures</a>
-<a href="https://fbref.com/en/comps/12/2020-2021/schedule/2020-2021-La-Liga-Scores-and-Fixtures" class="uri">https://fbref.com/en/comps/12/2020-2021/schedule/2020-2021-La-Liga-Scores-and-Fixtures</a>
-<a href="https://fbref.com/en/comps/20/2019-2020/schedule/2019-2020-Bundesliga-Scores-and-Fixtures" class="uri">https://fbref.com/en/comps/20/2019-2020/schedule/2019-2020-Bundesliga-Scores-and-Fixtures</a>
-<a href="https://fbref.com/en/comps/20/2020-2021/schedule/2020-2021-Bundesliga-Scores-and-Fixtures" class="uri">https://fbref.com/en/comps/20/2020-2021/schedule/2020-2021-Bundesliga-Scores-and-Fixtures</a>
-<a href="https://fbref.com/en/comps/9/2019-2020/schedule/2019-2020-Premier-League-Scores-and-Fixtures" class="uri">https://fbref.com/en/comps/9/2019-2020/schedule/2019-2020-Premier-League-Scores-and-Fixtures</a>
-<a href="https://fbref.com/en/comps/9/2020-2021/schedule/2020-2021-Premier-League-Scores-and-Fixtures" class="uri">https://fbref.com/en/comps/9/2020-2021/schedule/2020-2021-Premier-League-Scores-and-Fixtures</a></p>
+<p>Dades d’aforament extretes de FBREF:</p>
+<p><a href="https://fbref.com/en/comps/12/2019-2020/schedule/2019-2020-La-Liga-Scores-and-Fixtures" class="uri">https://fbref.com/en/comps/12/2019-2020/schedule/2019-2020-La-Liga-Scores-and-Fixtures</a></p>
+<p><a href="https://fbref.com/en/comps/12/2020-2021/schedule/2020-2021-La-Liga-Scores-and-Fixtures" class="uri">https://fbref.com/en/comps/12/2020-2021/schedule/2020-2021-La-Liga-Scores-and-Fixtures</a></p>
+<p><a href="https://fbref.com/en/comps/20/2019-2020/schedule/2019-2020-Bundesliga-Scores-and-Fixtures" class="uri">https://fbref.com/en/comps/20/2019-2020/schedule/2019-2020-Bundesliga-Scores-and-Fixtures</a></p>
+<p><a href="https://fbref.com/en/comps/20/2020-2021/schedule/2020-2021-Bundesliga-Scores-and-Fixtures" class="uri">https://fbref.com/en/comps/20/2020-2021/schedule/2020-2021-Bundesliga-Scores-and-Fixtures</a></p>
+<p><a href="https://fbref.com/en/comps/9/2019-2020/schedule/2019-2020-Premier-League-Scores-and-Fixtures" class="uri">https://fbref.com/en/comps/9/2019-2020/schedule/2019-2020-Premier-League-Scores-and-Fixtures</a></p>
+<p><a href="https://fbref.com/en/comps/9/2020-2021/schedule/2020-2021-Premier-League-Scores-and-Fixtures" class="uri">https://fbref.com/en/comps/9/2020-2021/schedule/2020-2021-Premier-League-Scores-and-Fixtures</a></p>
 </div>
 
 
